# orga2-tp2

./: .gitignore  CMakeLists.txt  README.md
informe/: YUVconverter.tex  apendices.tex  combinar.tex  conclusiones.tex  crearpdf.sh  informe.aux  informe.out  informe.tex  informe.toc  max.tex  zoom.tex
informe/data/: Orga2-TP2.ipynb  fourCombine-1ciclo-unroll.csv  fourCombine-1ciclo.csv  fourCombine-O3.csv  fourCombine-blanco.csv  fourCombine-control.csv  fourCombine-exp-antiCache.csv  fourCombine-exp.csv  fourCombine-img-grande.csv  fourCombine-unroll-img-grande.csv  fourCombine-unroll.csv  fourCombine.ipynb  linearZoom-O3.csv  linearZoom-blanco.csv  linearZoom-control.csv  linearZoom-shuf.csv  maxCloser-O3.csv  maxCloser-blanco.csv  maxCloser-control.csv  maxCloser-intel.csv  maxCloser-kernel.csv  maxCloser-kernel5.csv  maxCloser-unroll.csv  rgb2yuv-1pixel.csv  rgb2yuv-O3.csv  rgb2yuv-blanco.csv  rgb2yuv-control.csv  yuv2rgb-1pixel.csv  yuv2rgb-O3.csv  yuv2rgb-blanco.csv  yuv2rgb-control.csv
perf/: 1_compilar.sh  2_generar_imagenes.sh  3_generar_imgs_yuv.sh  4_correr_tests_perf.sh  Orga2-TP2.ipynb  fourCombine.csv  linearZoom.csv  maxCloser.csv  param.sh  rgb2yuv.csv  yuv2rgb.csv
src/: Makefile
src/data/: data.c
src/filters/: ASM_convert.asm  ASM_convert_1pixel.asm  ASM_fourCombine.asm  ASM_fourCombine_UNROLL.asm  ASM_fourCombine_antiCache.asm  ASM_linearZoom.asm  ASM_linearZoom_shuf.asm  ASM_maxCloser.asm  ASM_maxCloser5.asm  ASM_maxCloser_UNROLL.asm  C_convert.c  C_fourCombine.c  C_linearZoom.c  C_maxCloser.c  C_maxCloser5.c
src/tools/: diff.c
tests/solucion_catedra/: tp2
